--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2023.7.22
 charset-normalizer==3.3.1
 click==8.1.7
 Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
 frozenlist==1.4.0
 idna==3.4
 itsdangerous==2.1.2
@@ -17,7 +18,9 @@ numpy==1.26.1
 openai==0.28.1
 python-dotenv==1.0.0
 requests==2.31.0
+SQLAlchemy==2.0.23
 tqdm==4.66.1
+typing_extensions==4.8.0
 urllib3==2.0.7
 wcwidth==0.2.9
 Werkzeug==3.0.1
